# mxdx

./: CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml  setup.cfg  setup.py  usage-test-files.tsv  usage-test.sh
.github/workflows/: python-package-conda.yml  release.yml
ci/: conda_host_env.yml  conda_requirements.txt
examples/: consolidate.sbatch  mx-bt2-dx.sbatch  submit.sh
mxdx/: __init__.py  _constants.py  _io.py  _mxdx.py  _version.py  cli.py
mxdx/tests/: test_io.py  test_mxdx.py
mxdx/tests/test_data/: bar_r1.fasta  bar_r1.fastq  bar_r2.fasta  bar_r2.fastq  foo_r1.fasta  foo_r1.fastq  foo_r2.fasta  foo_r2.fastq  sammy.sam
