# adapted from scikit-bio

[build-system]
requires = ["setuptools", "wheel", "versioneer[toml]==0.29"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py38"
exclude = [
    "mxdx/tests/*", 
]

[tool.ruff.lint]
select = ["E", "W", "D"]  # pycodestyle (E, W), pydocstyle (D)
ignore = [
    "D203",  # puts a space before class docstrings
    "D213",  # puts summary on second line
    "D400",  # redundant with D415 in place
    "D301",  # forces raw string literals
]

[tool.versioneer]
VCS = "git"
style = "pep440"
versionfile_source = "mxdx/_version.py"
versionfile_build = "mxdx/_version.py"
parentdir_prefix = "mxdx-"
